--- a/.github/workflows/autosend.yml
+++ b/.github/workflows/autosend.yml
@@ -2,7 +2,7 @@ name: Auto Send Message To Groupme By Bot
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 4 * * *'
+    - cron: '0 4 1 * *'
 jobs:
   autoSend:
     runs-on: ubuntu-latest
